--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li class="flex items-center"><span class="w-1/3 font-bold">Tipo:</span> Pianoforte Verticale</li>
                     <li class="flex items-center"><span class="w-1/3 font-bold">Condizioni:</span> <span class="text-green-600 font-semibold">Ottime</span></li>
                     <li class="flex items-center"><span class="w-1/3 font-bold">Ubicazione:</span> Città Studi, Milano (1° piano)</li>
-                    <li class="flex items-center"><span class="w-1/3 font-bold">Prezzo:</span> <span class="text-2xl font-bold text-blue-600">4500</span></li>
+                    <li class="flex items-center"><span class="w-1/3 font-bold">Prezzo:</span> <span class="text-2xl font-bold text-blue-600">4500 € trattabili</span></li>
                 </ul>
 
                 <div class="mt-8">
