--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <main class="grid grid-cols-1 lg:grid-cols-2 gap-12">
             <div class="space-y-6">
                 <div class="bg-white rounded-xl shadow-2xl overflow-hidden">
-                    <img :src="https://github.com/lucagarufi/yamahau3apianofortimilano/blob/main/IMG_8062.jpeg" alt="Yamaha U3A Pianoforte" class="w-full h-auto transition-opacity duration-500" x-transition:enter="transition ease-out duration-300" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100">
+                    <img :src="https://raw.githubusercontent.com/lucagarufi/yamahau3apianofortimilano/main/IMG_8062.jpeg" alt="Yamaha U3A Pianoforte" class="w-full h-auto transition-opacity duration-500" x-transition:enter="transition ease-out duration-300" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100">
                 </div>
                 <div class="flex justify-center space-x-4">
                     <template x-for="(image, index) in images" :key="index">
