--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.3.0/alpine.js" integrity="sha512-nIwdJlD5/vHj23CbO2iHCXtsqzdTTx3e3uAmpTm4x2Y8xCIFyWu4cSIV8GaGe2UNVq86/1h9EgUZy7tn243qdA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-50 font-sans" x-data="{ activeImage: 0, images: ['/api/placeholder/800/600', '/api/placeholder/800/600', '/api/placeholder/800/600'] }">
+<body class="bg-gray-50 font-sans" x-data="{ activeImage: 0, images: ['IMG_8062.jpeg', 'IMG_8748.jpeg'] }">
     <div class="container mx-auto px-4 py-12">
         <header class="text-center mb-16">
             <h1 class="text-5xl font-bold text-gray-900 mb-4 font-serif">Yamaha U3A</h1>
